<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<packaging>pom</packaging> 
    
    <parent>
        <groupId>org.sakaiproject.purepoms</groupId>
        <artifactId>sakai-standard-tool</artifactId>
        <version>2.8.0</version>
    </parent>
    
	<name>irubric</name>
	<groupId>org.sakaiproject.irubric</groupId>
	<artifactId>irubric</artifactId>
    <version>1.0.0</version>
    <description>Sakai irubric integrates .</description>
  
	
	<properties>
		<entitybroker.version>[1.3.9,1.3.20)</entitybroker.version>
		<entitybroker-utils.version>1.3.7</entitybroker-utils.version>
    	<commons-beanutils.version>1.8.0</commons-beanutils.version>
    	<commons-codec.version>1.4</commons-codec.version>
    	<commons-betwixt.version>0.8</commons-betwixt.version>
    	<log4j.version>1.2.9</log4j.version>
    	<ical4j.version>1.0-rc3</ical4j.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <modules>
        <module>api</module>
        <module>bundle</module>
        <module>impl</module>
        <module>components</module>
        <module>tool</module>
        <module>assembly</module>
    </modules>
    
    
    <dependencyManagement>
    	<dependencies>
    	    <!-- irubric -->
            <dependency>
                <groupId>org.sakaiproject.irubric</groupId>
                <artifactId>irubric-api</artifactId>
                <version>${project.version}</version>
                <type>jar</type>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.sakaiproject.irubric</groupId>
                <artifactId>irubric-bundle</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.sakaiproject.irubric</groupId>
                <artifactId>irubric-impl</artifactId>
                <version>${project.version}</version>
                <type>jar</type>
            </dependency>
            
            <!-- EntityBroker-->
            <dependency>
                <groupId>org.sakaiproject.entitybroker</groupId>
                <artifactId>entitybroker-api</artifactId>
                <version>${entitybroker.version}</version>
            </dependency>
            
            <dependency>
                <groupId>org.sakaiproject.entitybroker</groupId>
                <artifactId>entitybroker-utils</artifactId>
                <version>${entitybroker-utils.version}</version>
            </dependency>
            
            <!-- Apache Commons -->
            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>${commons-codec.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-betwixt</groupId>
                <artifactId>commons-betwixt</artifactId>
                <version>${commons-betwixt.version}</version>
            </dependency>
            
            <!-- Others -->
            <dependency>
                <groupId>net.fortuna.ical4j</groupId>
                <artifactId>ical4j</artifactId>
                <version>${ical4j.version}</version>
            </dependency>
            <dependency>
                <groupId>log4j</groupId>
                <artifactId>log4j</artifactId>
                <version>${log4j.version}</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>org.sakaiproject</groupId>
                <artifactId>sakai-velocity-tool</artifactId>
                <version>2.8.0</version>
              </dependency>
      
    	</dependencies>
    </dependencyManagement>
    
    <!--
    <build>
    	<plugins>
    		<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.mycila.maven-license-plugin</groupId>
                <artifactId>maven-license-plugin</artifactId>
                <version>1.5.0</version>
                <configuration>
                    <basedir>${basedir}</basedir>
                    <header>https://source.sakaiproject.org/svn/sakai/trunk/ECLv2-header-template.txt</header>
                    <quiet>false</quiet>
                    <failIfMissing>true</failIfMissing>
                    <aggregate>false</aggregate>
                    <includes>
                        <include>src/**/*.java</include>
                        <include>**/test/**/*.java</include>
                        <include>src/webapp/**/*.css</include>
                        <include>src/webapp/**/*.html</include>
                        <include>src/webapp/**/*.js</include>
                        <include>src/webapp/**/*.jsp</include>
                    </includes>
                    <excludes>
                        <exclude>target/**</exclude>
                        <exclude>m2-target/**</exclude>
                        <exclude>**/*.properties</exclude>
                        <exclude>**/*.sql</exclude>
                        <exclude>**/*.TXT</exclude>
                        <exclude>**/*.xml</exclude>
                        <exclude>**/jquery*.*</exclude>
                        <exclude>src/webapp/**/lib/**/*</exclude>
                    </excludes>
                    <useDefaultExcludes>true</useDefaultExcludes>
                    <useDefaultMapping>true</useDefaultMapping>
                    <properties>
                        <year>${project.inceptionYear}-2009</year>
                        <holder>The Sakai Foundation</holder>
                    </properties>
                    <encoding>UTF-8</encoding>
                </configuration>
                <executions>
                    <execution>
                        <id>check-headers</id>
                        <phase>${licenseplugin.phase}</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
    	</plugins>
    </build>-->
    
    
    <reporting>
        <plugins>
            <!-- JavaDocs: mvn javadoc:javadoc -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <reportSets>
                  <reportSet>
                    <id>aggregate</id>
                    <configuration>
                      <aggregate>true</aggregate>
                          <source>1.5</source>
                      <encoding>UTF-8</encoding>
                        <links>
                        <link>http://java.sun.com/j2se/1.5.0/docs/api</link>
                        <link>http://java.sun.com/products/servlet/2.3/javadoc/</link>
                      </links>
                      <breakiterator>true</breakiterator>
                      <verbose>false</verbose>
                      <maxmemory>512m</maxmemory>
                      <additionalJOption>
                        -J-Xms168m -J-Xmx512m -J-XX:PermSize=128m -J-XX:NewSize=64m
                      </additionalJOption>
                    </configuration>
                    <reports>
                      <report>aggregate</report>
                    </reports>
                  </reportSet>
                </reportSets>   
            </plugin>
            <!-- FindBugs: mvn findbugs:findbugs -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>findbugs-maven-plugin</artifactId>
                <version>1.2</version>
                <configuration>
                    <findbugsXmlOutput>true</findbugsXmlOutput>
                    <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
                    <xmlOutput>true</xmlOutput>
                </configuration>
            </plugin>
            <!-- CheckStyle: mvn checkstyle:checkstyle -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <configuration>
                    <outputFileFormat>xml</outputFileFormat>
                </configuration>
            </plugin>
            <!-- Cobertura: mvn cobertura:cobertura -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>cobertura-maven-plugin</artifactId>
                <configuration>
                    <formats>
                        <format>html</format>
                        <format>xml</format>
                    </formats>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
    
</project>
